<resources>
    <string name="item_menu">Menu</string>
    <string name="menu_saude">Saúde</string>
    <string name="tv_item_dengue">Dengue</string>
    <string name="tv_item_depressao">Depressão</string>
    <string name="tv_item_coracao">Coração</string>
    <string name="tv_item_cancer">Câncer</string>
    <string name="tv_item_zika">Zika Vírus</string>
    <string name="tv_item_sobre">Sobre</string>
    <string name="app_name">Viva Bem</string>
    <string name="sintomas">Sintomas</string>
    <string name="coracao_1_titulo">Arritmia Cardíaca</string>
    <string name="coracao_1_conteudo_1">A arritmia cardíaca se caracteriza por um distúrbio no ritmo em que o coração bate. Ela se refere a um amplo espectro de enfermidades, várias delas bem frequentes e sem nenhum fator preocupante, outras mais incomuns e inquietantes, capazes de ameaçar a existência humana. No processo de incidência da arritmia o coração pode pulsar mais veloz, no caso das taquicardias, ou mais lentamente, como ocorre nos eventos conhecidos como bradicardias.</string>
    <string name="coracao_1_conteudo_2">Algumas vezes a arritmia pode aparecer sem nem ser notada, o que ocorre na maior parte das pessoas. Outras são mais sintomáticas. Sua ocorrência, portanto, varia conforme o contexto clínico do indivíduo – quantas vezes ela aparece, qual a frequência cardíaca do paciente, se há outra enfermidade do coração em pauta, entre outros fatores. A queixa mais constante é referente à palpitação, comum às duas formas de arritmia cardíaca; alguns são mais afetados por este sintoma. Outro sinal é o desmaio, do qual a pessoa retorna imediatamente, sem nenhum auxílio alheio. Aparecem também falta de ar, cadência lenta ou irregular do coração, percepção de um pequeno intervalo entre as batidas cardíacas, ansiedade, debilidade, tontura e leve dor na cabeça, sudorese, sensação de estar sem fôlego, dor no peito. Em casos mais graves a pessoa pode revelar confusão psíquica, pressão baixa, e angina, exigindo um rápido atendimento para se evitar um mal maior.</string>
    <string name="coracao_2_titulo">Parada Cardiorresiratória</string>
    <string name="coracao_2_conteudo_1">Recebe o nome de parada cardiorrespiratória (PCR) a abrupta e inesperada interrupção da circulação sanguínea, consequente da parada dos batimentos cardíacos que são responsáveis pela manutenção do débito cardíaco. Após a ocorrência deste fenômeno, o indivíduo perde a consciência dentro de 10 a 15 segundos, em decorrência da ausência de circulação sanguínea no cérebro.</string>
    <string name="coracao_2_conteudo_2">A PCR pode apresentar-se em formas distintas, são elas: Fibrilação ventricular ou taquicardia ventricular sem pulso: caracteriza-se por um ritmo cardíaco acelerado, irregular e ineficaz. Assistolia ventricular: neste caso, há ausência de ritmo cardíaco. Atividade elétrica sem pulso: neste caso, há a presença de atividade elétrica na musculatura cardíaca; todavia, os batimentos são ineficazes e não há a presença de circulação sanguínea.</string>
    <string name="coracao_3_titulo">Pericardite</string>
    <string name="coracao_3_conteudo_1">A pericardite é uma inflamação do pericárdio. Este, por sua vez, é o “saco” formado por duas camadas delgadas que envolvem o coração, separadas por um espaço virtual que contém uma pequena quantidade de líquido, e tem como função impedir que o coração se encha de sangue mais do que o necessário, além de protegê-lo de possíveis infecções que possam acometer a região torácica.</string>
    <string name="coracao_3_conteudo_2">O sintoma característico de pericardite é a dor torácica, que irradia para as costas e é aliviada ao se sentar para a frente. Outros sintomas incluem tosse seca, febre, fadiga e ansiedade. Essa afecção pode ser erroneamente diagnosticada como infarto do miocárdio e vice-versa. Na auscultação ouve-se abaixo do esterno um som causado por um atrito de fricção pericárdica. Outros sinais incluem elevação-ST e depressão-PR no eletrocardiograma.</string>
    <string name="coracao_4_titulo">Cardiopatia Congênita</string>
    <string name="coracao_4_conteudo_1">A doença cardíaca congênita (cardiopatia congênita) é uma anormalidade na estrutura do seu coração presente antes mesmo do nascimento. É um termo genérico utilizado para descrever anormalidades do coração e dos grandes vasos, presentes ao nascimento. Esses defeitos ocorrem enquanto o feto está se desenvolvendo no útero e pode afetar cerca de 1 em cada 100 crianças, segundo dados da American Heart Association. É o defeito congênito mais comum e uma das principais causas de óbito relacionados a malformações congênitas. As cardiopatias congênitas podem produzir sintomas no nascimento, durante a infância, ou estão só na idade adulta. Em alguns casos, a cardiopatia congênita não causa sintomas.</string>
    <string name="coracao_4_conteudo_2">Os sintomas de cardiopatia congênita podem não aparecer até mais tarde na vida. Eles também podem reaparecer anos depois de fazer algum tratamento para um problema cardíaco. Os sintomas dependerão também do tipo de má-formação apresentado pelo paciente. Sintomas: A cianose (pele com coloração azulada) aparecerá nos defeitos que provocam shunt, ou seja, uma passagem anormal do sangue do lado direito do coração (rico em CO2), para lado esquerdo (rico em O2). Com isso teremos a entrada de sangue pouco oxigenado na circulação que vai para o corpo todo. Falta de ar. Pneumonias de repetição. Tosse. Sudorese ou cansaço para as mamadas (neonatal). Cansar rapidamente após exercício. Tonturas ou desmaios. Inchaço de tecido do corpo ou órgãos (edema), por disfunção do músculo cardíaco.</string>
    <string name="coracao_5_titulo" formatted="false">Sopro no Coração</string>
    <string name="coracao_5_conteudo_1" formatted="false">O sopro no coração, cientificamente chamado de sopro cardíaco, é caracterizado por um som que se ouve no intervalo entre as batidas normais do coração. Este som é referente a passagem de sangue pelo coração, através das válvulas cardíacas. Pode ser normal (sopro fisiológico ou inocente) ou pode estar relacionado a alguma doença cardíaca como: Prolapso da válvula mitral. Anemia. Febre reumática. Má formação congênita. Endocardite infecciosa e Calcificação das válvulas cardíacas. É importante ressaltar que nem sempre o indivíduo que possui sopro no coração, possui alguma doença cardíaca. Muitas vezes esta é uma situação fisiológica que não representa nenhum perigo para a saúde.</string>
    <string name="coracao_5_conteudo_2" formatted="false">Geralmente o sopro no coração não gera sintomas, sendo somente evidenciado num exame clínico realizado pelo médico, conhecido como ausculta do coração. Contudo, quando o indivíduo possui um sopro de grau 5 ou 6, o médico pode até mesmo perceber uma certa vibração cardíaca quando posiciona uma de suas mãos sobre o tórax do indivíduo.</string>
    <string name="dengue_1_titulo">Dengue</string>
    <string name="dengue_1_conteudo_1">A dengue é uma doença febril aguda causada por um vírus, sendo um dos principais problemas de saúde pública no mundo. O seu principal vetor de transmissão é o mosquito Aedes aegypti, que se desenvolve em áreas tropicais e subtropicais. A Organização Mundial da Saúde (OMS) estima que entre 50 a 100 milhões de pessoas se infectem anualmente com a dengue em mais de 100 países de todos os continentes, exceto a Europa. Cerca de 550 mil doentes necessitam de hospitalização e 20 mil morrem em consequência da dengue. Existem quatro tipos de dengue, pois o vírus causador da dengue possui quatro sorotipos: DEN-1, DEN-2, DEN-3 e DEN-4. A infecção por um deles dá proteção permanente para o mesmo sorotipo, mas imunidade parcial e temporária contra os outros três. Embora pareça pouco agressiva, a doença pode evoluir para a dengue hemorrágica e a síndrome do choque da dengue, caracterizadas por sangramento e queda de pressão arterial, o que eleva o risco de morte. A melhor maneira de combater esse mal é atuando de forma preventiva, impedindo a reprodução do mosquito.</string>
    <string name="dengue_1_conteudo_2">Os sintomas da dengue iniciam de uma hora para outra e duram entre 5 a 7 dias. Os principais sinais são: Febre alta com início súbito (39° a 40°C). Forte dor de cabeça. Dor atrás dos olhos, que piora com o movimento dos mesmos. Perda do paladar e apetite. Manchas e erupções na pele semelhantes ao sarampo, principalmente no tórax e membros superiores. Náuseas e vômitos. Tontura. Extremo cansaço. Moleza e dor no corpo. Muitas dores nos ossos e articulações. Dor abdominal (principalmente em crianças).</string>
    <string name="depressao_1_titulo">Depressão</string>
    <string name="depressao_1_conteudo_1">A depressão é um distúrbio afetivo que acompanha a humanidade ao longo de sua história. No sentido patológico, há presença de tristeza, pessimismo, baixa autoestima, que aparecem com frequência e podem combinar-se entre si. É imprescindível o acompanhamento médico tanto para o diagnóstico quanto para o tratamento adequado.</string>
    <string name="depressao_1_conteudo_2">São sintomas de depressão: Humor depressivo ou irritabilidade, ansiedade e angústia. Desânimo, cansaço fácil, necessidade de maior esforço para fazer as coisas. Diminuição ou incapacidade de sentir alegria e prazer em atividades anteriormente consideradas agradáveis. Desinteresse, falta de motivação e apatia. Falta de vontade e indecisão. Sentimentos de medo, insegurança, desesperança, desespero, desamparo e vazio. Pessimismo, ideias frequentes e desproporcionais de culpa, baixa autoestima, sensação de falta de sentido na vida, inutilidade, ruína, fracasso, doença ou morte.. A pessoa pode desejar morrer, planejar uma forma de morrer ou tentar suicídio. Interpretação distorcida e negativa da realidade: tudo é visto sob a ótica depressiva, um tom "cinzento" para si, os outros e o seu mundo. Dificuldade de concentração, raciocínio mais lento e esquecimento. Diminuição do desempenho sexual (pode até manter atividade sexual, mas sem a conotação prazerosa habitual) e da libido. Perda ou aumento do apetite e do peso. Insônia (dificuldade de conciliar o sono, múltiplos despertares ou sensação de sono muito superficial), despertar matinal precoce (geralmente duas horas antes do horário habitual) ou, menos frequentemente, aumento do sono (dorme demais e mesmo assim fica com sono a maior parte do tempo). Dores e outros sintomas físicos não justificados por problemas médicos, como dores de barriga, má digestão, azia, diarreia, constipação, flatulência, tensão na nuca e nos ombros, dor de cabeça ou no corpo, sensação de corpo pesado ou de pressão no peito, entre outros.</string>
    <string name="zika_1_titulo">Zika Vírus</string>
    <string name="zika_1_conteudo_1">Zika Vírus é uma infecção causada pelo vírus ZIKV, transmitida pelo mosquito Aedes aegypti, mesmo transmissor da dengue e da febre chikungunya. O vírus Zika teve sua primeira aparição registrada em 1947, quando foi encontrado em macacos da Floresta Zika, em Uganda. Entretanto, somente em 1954 os primeiros seres humanos foram contaminados, na Nigéria. O vírus Zika atingiu a Oceania em 2007 e a França no ano de 2013. O Brasil notificou os primeiros casos de Zika vírus em 2015, no Rio Grande do Norte e na Bahia.</string>
    <string name="zika_1_conteudo_2">Os sinais de infecção pelo Zika vírus são parecidos com os sintomas da dengue, e começam de 3 a 12 dias após a picada do mosquito. Os sintomas de Zika Vírus são: Febre baixa (entre 37,8 e 38,5 graus). Dor nas articulações (artralgia), mais frequentemente nas articulações das mãos e pés, com possível inchaço. Dor muscular (mialgia). Dor de cabeça e atrás dos olhos. Erupções cutâneas (exantemas), acompanhadas de coceira. Podem afetar o rosto, o tronco e alcançar membros periféricos, como mãos e pés. Conjuntivite: um quadro de vermelhidão e inchaço nos olhos, mas em que não ocorre secreção.</string>
</resources>